[gd_scene load_steps=4 format=3 uid="uid://b4p6kmywhq548"]

[ext_resource type="FontFile" uid="uid://w3076qvrbys5" path="res://content/font/DepartureMono-Regular.otf" id="1_5eqlk"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_hm830"]

[sub_resource type="Theme" id="Theme_utnof"]
default_font = ExtResource("1_5eqlk")

[node name="menu_main" type="Control" node_paths=PackedStringArray("start_btn", "credit_btn", "quit_btn")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_utnof")
script = ExtResource("1_hm830")
start_btn = NodePath("marginbox/vbox/vbox/start_btn")
credit_btn = NodePath("marginbox/vbox/vbox/credit_btn")
quit_btn = NodePath("marginbox/vbox/vbox/quit_btn")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="marginbox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="vbox" type="VBoxContainer" parent="marginbox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="game_title" type="Label" parent="marginbox/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "the tiny tale
"

[node name="vbox" type="VBoxContainer" parent="marginbox/vbox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="start_btn" type="Button" parent="marginbox/vbox/vbox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "start"
alignment = 0

[node name="option_btn" type="Button" parent="marginbox/vbox/vbox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "option"
alignment = 0

[node name="credit_btn" type="Button" parent="marginbox/vbox/vbox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "credit"
alignment = 0

[node name="quit_btn" type="Button" parent="marginbox/vbox/vbox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "quit"
alignment = 0

[node name="copyright" type="Label" parent="marginbox/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "a game by jestersuitgame / @arieare"
